--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -23,6 +23,6 @@ jobs:
   directory_content_job:
     runs-on: ubuntu-18.04
     steps:
-      - name: Now it is
+      - name: Directory content
         run: |
           ls -l
