Added rollback-option in pipeline.yml

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,4 @@ jobs:
           heroku_email: 'lahtinen.jaakko@gmail.com'
           healthcheck: "https://pokedex-test-1422.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
