--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,13 +24,15 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
-      - name: e2e tests
+      - name: e2e tests 
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      - uses: akhileshns/heroku-deploy@v3.8.9
+      - name: heroku deployment 
+        uses: akhileshns/heroku-deploy@v3.8.9
+        if: ${{ github.event_name == 'push' }}
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'pokedex-test-1422'
