--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,10 +46,14 @@ jobs:
           COMMITS: ${{ toJson(github.event.commits) }}
         run: echo "$COMMITS"
       - name: Check commit messages for skip tag
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "Skipping!"
         if: ${{github.event_name == 'push' && contains(join(COMMIT_MESSAGES), '#skip') }}
       - name: Conditions event name is push
         run: echo github.event_name == 'push'
+      - name: Commit messages contains skip
+        run: echo ${{ contains(join(COMMIT_MESSAGES), '#skip') }}
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
         env:
