--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,17 +45,17 @@ jobs:
         env:
           COMMITS: ${{ toJson(github.event.commits) }}
         run: echo "$COMMITS"
-      - name: Check commit messages for skip tag
+      - name: commit messages
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        run: echo "$COMMIT_MESSAGES"
+      - name: Check commit messages for skip tag
         run: echo "Skipping!"
-        if: ${{github.event_name == 'push' && contains(join(COMMIT_MESSAGES), '#skip') }}
+        if: ${{github.event_name == 'push' && contains(join(github.event.commits.*.message), '#skip') }}
       - name: Conditions event name is push
         run: echo github.event_name == 'push'
       - name: Commit messages contains skip
-        env:
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        run: echo ${{ contains(join(COMMIT_MESSAGES), '#skip') }}
+        run: echo ${{ contains(join(github.event.commits.*.message), '#skip') }}
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
         env:
