--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,8 +31,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
   deploy:
-    env:
-       COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+    if: ${{github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
     needs: simple_deployment_pipeline
     runs-on: ubuntu-18.04
     steps:
@@ -51,9 +50,8 @@ jobs:
         run: echo "$COMMIT_MESSAGES"
       - name: Check commit messages for skip tag
         run: echo "Skipping!"
-        if: ${{github.event_name == 'push' && contains(join(github.event.commits.*.message), '#skip') }}
       - name: Conditions event name is push
-        run: echo github.event_name == 'push'
+        run: echo ${{github.event_name == 'push'}}
       - name: Commit messages contains skip
         run: echo ${{ contains(join(github.event.commits.*.message), '#skip') }}
       - name: Bump version and push tag
